--- a/README.adoc
+++ b/README.adoc
@@ -22,7 +22,7 @@ diverge from the defaults
 
 
 
-== Installation and Getting Started
+== Installation and Getting Started   add Chinese comments to make it reading easy!      
 The {docs}/html/[reference documentation] includes detailed
 {docs}/html/getting-started.html#getting-started-installing-spring-boot[installation
 instructions] as well as a comprehensive
